--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -14,7 +14,7 @@
                 <i class="fa fa-th-large my-verti-icon"></i>
                 <span class="sidebar-heading">Dashboard</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/my-catalogue">
-              <i class="fa fa-heart my-verti-icon" style="color:#666666;"></i>
+              <i class="fa fa-heart my-verti-icon catelog-icon"></i>
               <span class="sidebar-heading">My Catalog</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage/jobsites">
               <i class="fa fa-map-marker my-verti-icon"></i>
@@ -26,15 +26,15 @@
               <i class="fa fa-bookmark my-verti-icon"></i>
               <span class="sidebar-heading">Quotes &amp;
               Reservations</span></a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations">
+            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/make-payment">
               <i class="fa fa-usd my-verti-icon"></i>
               <span class="sidebar-heading">Make a Payment</span></a></li>
             <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/invoices">
               <i class="fa fa-file my-verti-icon"></i>
               <span class="sidebar-heading">View Invoices</span></a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-comments my-verti-icon"></i>
+            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/requests"><i class="fa fa-comments my-verti-icon"></i>
               <span class="sidebar-heading">Requests</span></a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-briefcase my-verti-icon"></i>
+            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/view-contracts"><i class="fa fa-briefcase my-verti-icon"></i>
               <span class="sidebar-heading">View Contracts</span></a></li>
 
           </ul>
