--- a/src/app/make-payment/make-payment.html
+++ b/src/app/make-payment/make-payment.html
@@ -5,7 +5,7 @@
 		      <div class="row">
 		        <!-- START  Dashboard tab -->
 		        <div class="col-sm-12 col-xs-12 filt-btn">
-		          <button class="btn btn-default" ng-click="filterBtn()">Qoutes and Reservation</button>
+		          <button class="btn btn-default" ng-click="filterBtn()">Make Payment</button>
 		        </div>
 		        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
 		          <ul class="nav nav-pills nav-stacked my-verti-tab">
@@ -22,11 +22,11 @@
 		            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
 		              <i class="fa fa-user my-verti-icon"></i>
 		              <span class="sidebar-heading">Manage My Account</span></a></li>
-		            <li class="active" ng-click="closeFilter()"><a data-toggle="pill" href="#/quota-n-reservations">
+		            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/quota-n-reservations">
 		              <i class="fa fa-bookmark my-verti-icon"></i>
 		              <span class="sidebar-heading">Quotes &amp;
 		              Reservations</span></a></li>
-		            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/make-payment">
+		            <li class="active" ng-click="closeFilter()"><a data-toggle="pill" href="#/make-payment">
 		              <i class="fa fa-usd my-verti-icon"></i>
 		              <span class="sidebar-heading">Make a Payment</span></a></li>
 		            <li ng-click="closeFilter()"><a data-toggle="pill" href="#/invoices">
@@ -43,13 +43,14 @@
 		        <!-- End  Dashboard tab -->
 				<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
 				  <div class="tab-content">
-				    <!-- START  Dashboard Content -->
+				    <!-- START  Payment Content -->
 				    <div id="dash" class="tab-pane fade in active">
 
 				      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 my-bottm-line manage_job_tit">
-				        Quota and Reservations
+				        Make Payment
 				      </div>
 				    </div>
+				    <!-- End Payment Content -->
 				  </div>
 				</div>
 			</div>
