--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -17,15 +17,16 @@
             </h5>
             <div ng-repeat="subcategories in selectedRootCategory.children" class="root-categories">
               <div>
-                <ul class="categories">
+                <ul class="categories" >
                   <li ng-click="selectCategory(subcategories)">
                     <a class="category-name on-hover-pointer" ng-checked="subcategories.Id == selectedCategory.Id" ng-class="{'active-sub-category': subcategories.Id == selectedCategory.Id}">
                       <span class="cat_mar">{{subcategories.Name}}</span>
-                    </a></li>
-                  <li ng-show="subcategories.Id == selectedCategory.Id">
-                    <ul class="sub-categories">
+                    </a>
+                    <ul class="sub-categories" ng-show="subcategories.Id == selectedCategory.Id">
                       <li ng-repeat="attribute in subcategories.Attribute">
-                        <div><i class="fa fa-check" style="margin-right: 15px;"></i>{{attribute.Attribute_name}}</div>
+                        <div>
+                          {{attribute.Attribute_name}}
+                        </div>
                         <div class="checkbox filter_cat_tex1" ng-repeat="value in attribute.value">
                           <label><input type="checkbox" name="selectedAtrributes[]" value="{{value.attribute_value_name}}" ng-checked="selectedAttributes.indexOf(value.attribute_value_name) > -1" ng-click="selectCategoryAttributes(attribute.Attribute_name,value.attribute_value_name)"><span class="cat_mar">{{value.attribute_value_name}}</span></label>
                         </div>
