--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -310,8 +310,12 @@ html, body {
     -moz-transform: scale(0);
   }
 }
-.categories .sub-categories{
-  margin-left: 20px;
+.category_filter1 .categories .sub-categories{
+  margin-left: 30px;
+}
+
+.category_filter1 .sub-categories{
+  margin-top: 10px;
 }
 
 .root-categories{
