inline removed from all the pages

--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -1,12 +1,12 @@
-<div class="modal-content" style="box-shadow: none; border: none;">
+<div class="modal-content prof-btn">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" ng-click="$dismiss()">×</button>
     <h4 class="modal-title">Reserve this Equipment</h4>
   </div>
-  <div class="modal-body" style="overflow: hidden;">
+  <div class="modal-body order-history-modal">
         <div class="col-lg-6 reserve-left">
-          <figure style="text-align: center;">
-            <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="" style="width: 100%; max-width: 350px;">
+          <figure class="pull-center">
+            <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="" class="equip-reserve-img">
           </figure>
 
           <div class="col-md-12">
