--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -1,23 +1,23 @@
                 <div class="row no-search-row">
-                  <div class="col-md-12 col1" style="padding-top: 23px;">
-                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o on-hover-pointer" style="color: #666666;"></i></a></p>
+                  <div class="col-md-12 col1 help-heading-col">
+                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o on-hover-pointer catelog-icon"></i></a></p>
                   </div>
                   <div class="col-md-12 col2">
                     <p>What do you need?</p>
-                    <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control" style="height: 38px;">
+                    <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control your-need">
                   </div>
                   <div class="col-md-12 col2">
                     <p>When do you need it?</p>
                   </div>
-                  <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+                  <div class="col-md-6 col2 col3 toppadding">
+                    <div class="form-control form-left your-need to-from-div">
                       <p class="pull-left to">To</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
                     </div>
                   </div>
-                  <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+                  <div class="col-md-6 col2 col3 toppadding">
+                    <div class="form-control form-left your-need to-from-div">
                       <p class="pull-left">From</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
@@ -25,18 +25,18 @@
                   </div>
                   <div class="col-md-6 col2 col3">
                     <p>Email</p>
-                    <div class="form-control form-left" style="height: 38px;">
+                    <div class="form-control form-left your-need">
                       <input type="text" placeholder="Enter a valid email address" class="info-input">
                     </div>
                   </div>
                   <div class="col-md-6 col2 col3">
                     <p>Phone</p>
-                    <div class="form-control form-left" style="height: 38px;">
+                    <div class="form-control form-left your-need">
                       <input type="text" placeholder="(xxx)-xxx-xxxxx)" class="info-input">
                     </div>
                   </div>
                   <div class="col-md-12 col1"></div>
-                  <div class="col-md-12 col4" style="padding-bottom: 16px;">
+                  <div class="col-md-12 col4 help-request-btn">
                     <button class="btn btn-primary pull-right">Request Further Information</button>
                   </div>
                 </div>
