--- a/src/app/job-site-detail/job-site-detail.html
+++ b/src/app/job-site-detail/job-site-detail.html
@@ -1,60 +1,60 @@
 <div class="row job-header-row">
 	<div class="col-md-12 job-site-header">
-		<h4>Job Site Details<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #666666;"></i></a></h4>
+		<h4>Job Site Details<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o catelog-icon"></i></a></h4>
 	</div>
 </div>
-<div class="row" style="margin: 0;">
+<div class="row nomargin">
 	<div class="col-md-6 detail-col">
 		<h4>Site Number</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>123 - 453</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Site</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>506 Hopkins Road, Houston</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Address Line</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>Address Line</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Address Line 2</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>Address Line 2 goes</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>City</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>Washington DC</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Zip Code</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>23308</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Country</h4>
 	</div>
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>USA</p>
 	</div>
 	<div class="col-md-6 detail-col">
 		<h4>Phone</h4>
 	</div>	
-	<div class="col-md-6 detail-col" style="border: none;">
+	<div class="col-md-6 detail-col noborder">
 		<p>+1 234 567 890</p>
 	</div>
 </div>
-<hr style="margin-bottom: 0;">
-<div class="row" style="margin: 0;">
+<hr class="bottommargin">
+<div class="row nomargin">
 	<div class="col-md-12 site-col">
 		<button class="btn job-btn" ng-click="$dismiss()">Close</button>
 	</div>
