--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -24,7 +24,7 @@
             demand account management services that Noble Iron offers, including access to these awesome
 
             benefits:</p>
-          <ul style="padding-left: 40px; list-style-type: disc;">
+          <ul class="portal-access-ul">
             <li>Access and generate real-time quotes</li>
 
             <li> Create &amp; manage reservations and off-rent any equipment in seconds
