--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -8,17 +8,17 @@
       <div class="container nopadding">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed landing-header prelogin-header-btn" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true" style="margin-top: 0;">
+          <button type="button" class="navbar-toggle collapsed landing-header prelogin-header-btn topmargin" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/#/" class="navbar-brand" style="padding-top:0;">  <img src="assets/images/logo.png" alt="" ></a>
+          <a href="/#/" class="navbar-brand toppadding">  <img src="assets/images/logo.png" alt="" ></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse collapse-for-small pre-collapse" id="bs-example-navbar-collapse-1" style="border-color: #009ddc;">
+        <div class="collapse navbar-collapse collapse-for-small pre-collapse" id="bs-example-navbar-collapse-1">
           <div class="nav navbar-nav landing-header prelogin-header">
             <div>
               <form class="topnav-search" role="search">
