--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -1,6 +1,6 @@
 <section>
   <!-- START  Main Content -->
-  <article class="main-cantain" style="min-height: 400px;">
+  <article class="main-cantain search-main-contain">
     <div class="container">
       <load-indicator loading="!flags.categoriesFetched"></load-indicator>
       <div class="row" ng-show="flags.categoriesFetched">
