--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1183,3 +1183,106 @@ button:hover {
 .rightmargin {
   margin-right: 0;
 }
+
+.noborder {
+  border: 0;
+}
+
+.forgot-pass-cancel {
+  margin-left: 10px; 
+  padding: 8px 10px;
+}
+
+.forgot-pass-btn {
+  width: auto; 
+  min-width: 148px;
+}
+
+.loading-spinner {
+  font-size: 18px;
+}
+
+.prof-btn {
+  box-shadow: none !important;
+  outline: none !important; 
+}
+
+.help-heading-col {
+  padding-top: 23px;
+}
+
+.your-need {
+  height: 38px;
+}
+
+.help-request-btn {
+  padding-bottom: 16px;
+}
+
+.to-from-div {
+  margin-bottom: 10px;
+}
+
+.invoices-btn-div {
+  padding-bottom: 20px;
+}
+
+.logout-div {
+  min-height: 300px;
+}
+
+.logout-div h4 {
+  margin: 20px 0 0 40px;
+}
+
+.order-history-modal {
+  overflow: hidden;
+}
+
+.portal-access-ul {
+  padding-left: 40px; 
+  list-style-type: disc;
+}
+
+.toppadding {
+  padding-top: 0;
+}
+
+.pre-collapse {
+  border-color: #009ddc; 
+}
+
+.no-search-desc {
+  text-align: center; 
+  margin-top: 20px;
+}
+
+.search-main-contain {
+  min-height: 400px;
+}
+
+.pull-center {
+  text-align: center;
+}
+
+.equip-reserve-img {
+  width: 100%; 
+  max-width: 350px;
+}
+
+.change-pass {
+  color: #666666;
+  font-size: 20px;
+}
+
+.activate-user-div {
+  min-height: 185px;
+}
+
+.activate-user-div h4 {
+  margin: 20px 0 20px 40px;
+}
+
+.check-mark {
+  font-size: 45px;
+}
