--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 style="color:#666666">Profile
+          <h3 class="catelog-icon">Profile
             <a href="#/change/password" class="pull-right change-pass">Change Password</a>
           </h3>
         </div>
