--- a/src/app/change-password/change-password.html
+++ b/src/app/change-password/change-password.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h3 style="color:#666666; font-size: 20px;">Change Password</h3>
+          <h3 class="change-pass">Change Password</h3>
         </div>
       </div>
     </div>
