--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -50,10 +50,10 @@
                   <input type="email" autocomplete="off" class="form-control" ng-model="forgotPasswordData.email" name="email"
                          ng-required="true" placeholder="Enter email">
                 </div>
-                <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px; padding: 8px 10px;">Cancel</a>
-                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right" style="width: auto; min-width: 148px;">
+                <a href="#/login" class="btn btn-default pull-right forgot-pass-cancel">Cancel</a>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right forgot-pass-btn">
                   <span ng-hide="loading">Submit</span>
-                  <i class="fa fa-spinner fa-spin" ng-show="loading" style="font-size: 18px;"></i>
+                  <i class="fa fa-spinner fa-spin loading-spinner" ng-show="loading"></i>
                 </button>
               </form>
             </div>
