--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -53,7 +53,7 @@
                 <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col" style="padding-bottom: 20px;">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col invoices-btn-div">
                 <button class="btn btn-default pull-right manage-job-btn deactivate list" ng-class="{'active' : flags.outstanding}" ng-click="toggleInvoiceView(true)">Outstanding</button>
                 <button class="btn btn-default pull-right manage-job-btn deactivate map" ng-click="toggleInvoiceView(false)" ng-class="{'active' : !flags.outstanding}">All Invoices</button>
               </div>
