--- a/src/app/logout/logout.html
+++ b/src/app/logout/logout.html
@@ -1,5 +1,5 @@
 <section>
-  <div style="min-height: 300px;">
-    <h4 style="margin: 20px 0 0 40px;">Please wait while we logout...</h4>
+  <div class="logout-div">
+    <h4>Please wait while we logout...</h4>
   </div>
 </section>
