--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -22,7 +22,7 @@
 
               </h4>
             </div>
-            <div class="panel-collapse collapse" ng-class="{'in': order.toggleOpened}" aria-expanded="true" style="">
+            <div class="panel-collapse collapse" ng-class="{'in': order.toggleOpened}" aria-expanded="true">
               <div class="panel-body">
                 <div class="col-lg-11 col-md-11 col-sm-8 col-xs-8">{{order.orderNo}}</div>
                 <div class="col-lg-1 col-md-1 col-sm-4 col-xs-4 text-right">
@@ -70,7 +70,7 @@
                   <button type="button" class="close" data-dismiss="modal">×</button>
                   <h4 class="modal-title">Let us help you out</h4>
                 </div>
-                <div class="modal-body" style="overflow: hidden;">
+                <div class="modal-body order-history-modal">
                   <form role="form">
                     <div class="col-md-6">
                       <div class="form-group">
