--- a/src/app/prelogin-footer/footer.html
+++ b/src/app/prelogin-footer/footer.html
@@ -61,7 +61,7 @@
             Get news on our latest promotions, products and services. We'll never share your email address and you can opt out any time
           </p>
           <input type="text" placeholder="Enter Your Email Id" class="form-control news-input">
-          <button class="btn btn-default sell-equ foot-btn" style="height: 34px;">Subscribe</button>
+          <button class="btn btn-default sell-equ foot-btn">Subscribe</button>
           <!-- <button type="button" class="btn btn-default sell-equ  foot-btn" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button> -->
         </div>
       </div>
