--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -1,4 +1,4 @@
-<div class="row"  style="margin:0;">
+<div class="row nomargin">
   <div class="col-md-12" ng-if="results.length"><hr class="dash"></div>
   <div class="col-md-12 col-sm-6 col-xs-12 list-product" ng-repeat="item in results">
     <div class="col-md-3 lift-list">
