--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -50,27 +50,27 @@
 
       <div class="row no-search-row" ng-if="userQuery">
         <div class="col-md-12 text-col">
-          <p style="text-align: center; margin-top: 20px;">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
+          <p class="no-search-desc">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
         </div>
         <div class="col-md-12 col1">
           <p>Let us help you out</p>
         </div>
         <div class="col-md-12 col2">
           <p>What do you need?</p>
-          <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control" style="height: 38px; margin-bottom: 10px;">
+          <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control your-need to-from-div">
         </div>
         <div class="col-md-12 col2">
           <p>When do you need it?</p>
         </div>
-        <div class="col-md-6 col2 col3" style="padding-top:0;">
-          <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+        <div class="col-md-6 col2 col3 toppadding">
+          <div class="form-control form-left your-need to-from-div">
             <p class="pull-left to">To</p>
             <input type="text" placeholder="dd/mm/yy">
             <img src="assets/images/calendar.png" class="pull-right">
           </div>
         </div>
-        <div class="col-md-6 col2 col3" style="padding-top:0;">
-          <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+        <div class="col-md-6 col2 col3 toppadding">
+          <div class="form-control form-left your-need to-from-div">
             <p class="pull-left">From</p>
             <input type="text" placeholder="dd/mm/yy">
             <img src="assets/images/calendar.png" class="pull-right">
@@ -78,13 +78,13 @@
         </div>
         <div class="col-md-6 col2 col3">
           <p>Email</p>
-          <div class="form-control form-left" style="height: 38px;">
+          <div class="form-control form-left your-need">
             <input type="text" placeholder="Enter a valid email address" class="info-input">
           </div>
         </div>
         <div class="col-md-6 col2 col3">
           <p>Phone</p>
-          <div class="form-control form-left" style="height: 38px;">
+          <div class="form-control form-left your-need">
             <input type="text" placeholder="(xxx)-xxx-xxxxx)" class="info-input">
           </div>
         </div>
